--- a/CH1-SOLID_principles/SRP/pom.xml
+++ b/CH1-SOLID_principles/SRP/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>Without_SRP</artifactId>
+    <artifactId>SRP</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
